--- a/css/footer.css
+++ b/css/footer.css
@@ -3,15 +3,15 @@
     font-family: Roboto Condensed, serif;
     font-weight: 300;
     background-color: black;
-    bottom: 0;
     width: 100%;
     height: 50px;
-    margin-top: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 999;
     border-top: 1px solid #333;
+    position: absolute;
+    bottom: 0;
 }
 
 .footer-text {
