--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -1,5 +1,6 @@
 .main-page {
     width: 100%;
+    min-height: calc(100vh - 154px);
     position: relative;
 }
 
@@ -53,7 +54,6 @@
 
 .columns-container {
     display: flex;
-    align-items: flex-start;
     justify-content: space-evenly;
     margin-top: 50px;
     flex-wrap: wrap;
@@ -63,7 +63,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     flex: 1;
     min-height: 300px;
     height: 100%;
