--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -66,7 +66,8 @@
     flex: 1;
     min-height: 300px;
     height: 100%;
-    margin: 30px;
+    margin: 50px;
+    padding-bottom: 30px;
 }
 
 .column-container p.column-header {
